# Mimik

./: .gitignore  CMakeLists.txt  Functions to implement[Theek karna hai].txt  Functions.txt  Problems I haven't Solved  README.md  bootducky.h  deploy  ducky-pie.c  masterHeader.h  mimik.c  mimik.h  reset  run
lib/Config/: DEV_Config.h  Makefile  cmake_install.cmake
lib/FATfs/: CMakeLists.txt  Makefile  cmake_install.cmake  diskio.h  ff.h  ff_hal.c  ff_hal.h  ffconf.h  filesystem.c  filesystem.h
lib/Fonts/: Makefile  cmake_install.cmake
lib/GUI/: GUI_Paint.c  Makefile  cmake_install.cmake
lib/Infrared/: Makefile  cmake_install.cmake
lib/LCD/: Makefile  cmake_install.cmake
lib/Storage/: CMakeLists.txt  msc_device_disk.c  storage.c  storage.h  storage_driver.h  usb_descriptors.c
lib/USB/: CMakeLists.txt  keymap.h  script_injection.c  usb_descriptors.c
lib/USB/HID/: CMakeLists.txt  Makefile  cmake_install.cmake  opcodes.txt  script_injection.c  usb_descriptors.c
lib/USB/HID-MSC/: CMakeLists.txt  diskIO.c  filesystem_driver.c  media_storage.h  opcodes.txt  script_injection.c  script_injection.h  storage_driver.h  tusb_config.h  usb_descriptors.c
lib/USB/Human_Interface_Device_Class/: CMakeLists.txt  keymap.h  opcodes.txt  script_injection.c  script_injection.h  usb_descriptors.c
lib/USB/MSC/: CMakeLists.txt  Makefile  cmake_install.cmake  mimikMSC.c  mimikMSC.h  msc_device_disk.c  storage_driver.h
lib/USB/Media_Storage/: CMakeLists.txt  diskIO.c  filesystem_driver.c  media_storage.h  usb_descriptors.c
lib/lfs/: CMakeLists.txt  Makefile  cmake_install.cmake  init_filesystem.c  init_filesystem.h
lib/sdmmc/: CMakeLists.txt  Makefile  cmake_install.cmake  spi_sdmmc.c  spi_sdmmc.h
src/: CMakeLists.txt  Device.c  LCD_Test.h  Makefile  Themes.h  bootlogo.h  cmake_install.cmake  init_filesystem.c  memorycard.c  normal_mode.c  screen.c  screen_init.c  usb_mode.c
src/UI/: CMakeLists.txt  Makefile  UI.h  animation.c  cmake_install.cmake  fileManager.c  fileManager.h  file_explorer.c  globalUI.c  initUI.c  injection.c  injection.h  mimikMode.c  notify.c  setting.c  setting.h  sharedUI.c  uiImage.h
src/UI/Screens/: homePage.h  settingPage.h
src/UI/images/: uiImage.h
