aux_source_directory(. DIR_UI_SRCS)

include_directories(../UI)
include_directories(../../lib/Config)
include_directories(../../lib/GUI)
include_directories(../../lib/Infrared)
include_directories(../../lib/LCD)
include_directories(../../lib/lfs)
include_directories(../../lib/FATfs)
include_directories(../../lib/sdmmc)
include_directories(../../lib/USB/HID-MSC)
#include_directories(../../lib/USB/Media_Storage)
#include_directories(../../lib/USB/Human_Interface_Device_Class)

add_library(UI ${DIR_UI_SRCS})
target_link_libraries(UI PUBLIC pico_stdlib pico_multicore hardware_sync hardware_flash Config lfs LCD GUI Infrared FATfs sdmmc HID-MSC)